docs/7.58/md/abenselect_union_abexa.md
---
title: "SELECT, Union of Multiple Tables"
description: |
  This example demonstrates how a union is created across multiple tables. Source Code  Public class definition CLASS cl_demo_select_union DEFINITION INHERITING FROM cl_demo_classrun PUBLIC CREATE PUBLIC. PUBLIC SECTION. METHODS main REDEFINITION. METHODS constructor. ENDCLASS.  Public class
version: "7.58"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenselect_union_abexa.htm"
abapFile: "abenselect_union_abexa.htm"
keywords: ["select", "insert", "delete", "do", "if", "method", "class", "data", "abenselect", "union", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abendb_access.htm) →  [ABAP SQL](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql.htm) →  [ABAP SQL - Read Access](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_sql_reading.htm) →  [UNION, INTERSECT, EXCEPT](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapunion.htm) →  [UNION, Examples](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenunion_abexas.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20SELECT%2C%20Union%20of%20Multiple%20Tables%2C%20ABENSELECT_UNION_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion%20for%20improvement:)

SELECT, Union of Multiple Tables

This example demonstrates how a union is created across multiple tables.

Source Code   

\* Public class definition
CLASS cl\_demo\_select\_union DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
    METHODS constructor.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_select\_union IMPLEMENTATION.
  METHOD main.
    SELECT a AS c1, b AS c2, c AS c3, d AS c4
           FROM demo\_join1
    UNION DISTINCT
    SELECT d AS c1, e AS c2, f AS c3, g AS c4
          FROM demo\_join2
    UNION DISTINCT
    SELECT i AS c1, j AS c2, k AS c3, l AS c4
           FROM demo\_join3
           INTO TABLE @FINAL(result\_distinct).
    out->write( result\_distinct ).
    SELECT a AS c1, b AS c2, c AS c3, d AS c4
           FROM demo\_join1
    UNION ALL
    SELECT d AS c1, e AS c2, f AS c3, g AS c4
          FROM demo\_join2
    UNION ALL
    SELECT i AS c1, j AS c2, k AS c3, l AS c4
           FROM demo\_join3
           INTO TABLE @FINAL(result\_all).
    out->write( result\_all ).
    SELECT a AS c1, b AS c2, c AS c3, d AS c4
           FROM demo\_join1
    UNION ALL
    SELECT d AS c1, e AS c2, f AS c3, g AS c4
          FROM demo\_join2
    UNION DISTINCT
    SELECT i AS c1, j AS c2, k AS c3, l AS c4
           FROM demo\_join3
           INTO TABLE @FINAL(result\_all\_distinct1).
    out->write( result\_all\_distinct1 ).
    SELECT a AS c1, b AS c2, c AS c3, d AS c4
           FROM demo\_join1
    UNION ALL
    ( SELECT d AS c1, e AS c2, f AS c3, g AS c4
             FROM demo\_join2
      UNION DISTINCT
      SELECT i AS c1, j AS c2, k AS c3, l AS c4
            FROM demo\_join3 )
            INTO TABLE @FINAL(result\_all\_distinct2).
    out->write( result\_all\_distinct2 ).
    SELECT a AS c1, b AS c2, c AS c3, d AS c4
           FROM demo\_join1
    UNION DISTINCT
    SELECT d AS c1, e AS c2, f AS c3, g AS c4
          FROM demo\_join2
    UNION ALL
    SELECT i AS c1, j AS c2, k AS c3, l AS c4
           FROM demo\_join3
           INTO TABLE @FINAL(result\_distinct\_all1).
    out->write( result\_distinct\_all1 ).
    SELECT a AS c1, b AS c2, c AS c3, d AS c4
           FROM demo\_join1
    UNION DISTINCT
    ( SELECT d AS c1, e AS c2, f AS c3, g AS c4
            FROM demo\_join2
    UNION ALL
    SELECT i AS c1, j AS c2, k AS c3, l AS c4
          FROM demo\_join3 )
          INTO TABLE @FINAL(result\_distinct\_all2).
    out->write( result\_distinct\_all2 ).
  ENDMETHOD.
  METHOD constructor.
    super->constructor( ).
    DELETE FROM demo\_join1.
    DELETE FROM demo\_join2.
    DELETE FROM demo\_join3.
    INSERT demo\_join1 FROM TABLE @( VALUE #(
      ( a = 'a1' b = 'b1' c = 'c1' d = 'd1' )
      ( a = 'a2' b = 'b2' c = 'c2' d = 'd2' )
      ( a = 'a3' b = 'b3' c = 'c3' d = 'd3' ) ) ).
    INSERT demo\_join2 FROM TABLE @( VALUE #(
      ( d = 'a1' e = 'b1' f = 'c1' g = 'd1' )
      ( d = 'a2' e = 'b2' f = 'c2' g = 'd2' )
      ( d = 'a3' e = 'b3' f = 'c3' g = 'd3' ) ) ).
    INSERT demo\_join3 FROM TABLE @( VALUE #(
      ( i = 'a1' j = 'b1' k = 'c1' l = 'd1' )
      ( i = 'i1' j = 'j1' k = 'k1' l = 'l1' )
      ( i = 'i2' j = 'j2' k = 'k2' l = 'l2' ) ) ).
  ENDMETHOD.
ENDCLASS.

Description   

Four columns of the same type from result sets from three database tables DEMO\_JOIN1, DEMO\_JOIN2 and DEMO\_JOIN3 are combined to different SELECT statements using [UNION](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abapunion.htm). The DDIC database tables are filled in the static constructor.

-   The first statement shows the default behavior with addition DISTINCT. No rows are inserted from DDIC database table DEMO\_JOIN2 and one row is not inserted from DDIC database table DEMO\_JOIN3 because these rows already exist.
-   The second statement shows the behavior with addition ALL. All the rows from the three result sets are combined into one result set without removing any rows.
-   The third statement contains addition ALL in the first UNION and contains DISTINCT in the second union. The addition DISTINCT deletes all duplicate rows, including the rows created using addition ALL. Therefore, the result is the same as in the first statement.
-   The fourth statement is the same as the third, except that parentheses have been inserted here. First, the parentheses are evaluated. The addition DISTINCT only works in the parentheses and removes the first row from DEMO\_JOIN3. Afterwards the result set of the parentheses is completely inserted into the result set of DEMO\_JOIN1.
-   The fifth statement contains addition DISTINCT in the first UNION and contains ALL in the second union. In the first union, no rows are taken from DEMO\_JOIN2 because all the rows already exist. Next, all the rows are inserted from DEMO\_JOIN3.
-   The sixth statement is the same as the fifth, except that parentheses have been inserted here. Once the parentheses have been evaluated, their corresponding result set contains all rows from DEMO\_JOIN2 and DEMO\_JOIN3. In the union with rows from DEMO\_JOIN1, all duplicate rows are removed using DISTINCT, which means that the result is the same as with the first statement.